# Batlang

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  TODO.md  TODO.txt  install_requirements.sh  run.sh  setup.sh  setup_cmake.sh  test.asm  test.bt  tutorial.txt
src/: batlang.cpp  error.cpp  error.rs  lexer.cpp  main.cpp  main.rs  token.cpp  tokenizer.cpp
src/batypes/: batype.cpp  number.cpp
src/headers/: batlang.hpp  batring.hpp  batype.hpp  context.hpp  editline.h  environment.hpp  error.h  error.hpp  interpreter.hpp  lexer.h  lexer.hpp  node.hpp  nodes.hpp  number.hpp  parser.hpp  position.hpp  result.hpp  token.h  token.hpp  tokenizer.h  value.hpp
src/helpers/: batring.cpp  context.cpp  environment.cpp  error.cpp  error.rs  position.cpp  position.rs  result.cpp
src/interpreter/: history.txt  interpreter.cpp  lexer.cpp  lexer.rs  parser.cpp  token.cpp  token.rs
src/lexer/: lexer.cpp
src/parser/: nodes.cpp  parser.cpp  result.cpp
src/types/: node.cpp  nodes.cpp  number.cpp  token.cpp
tests/parser/: main  main.cpp
tests/parser2/: main  main.cpp
tests/parser3/: main  main.cpp  run.sh
tests/parser4/: main  run.sh
tests/tokenizer/: main  main.cpp
